--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
         <h1>Daftar Project HOLC</h1>
         <li>Project 1 : Pixel Maker Hand</li>
         <iframe src="https://scratch.mit.edu/projects/968693323/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <br>
+        <li>Project 2 : Aplikasi Menggambar Buatanku</li>
+        <iframe src="https://scratch.mit.edu/projects/976771225/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </body>
 </html>
