--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
         <br>
         <li>Project 2 : Aplikasi Menggambar Buatanku</li>
         <iframe src="https://scratch.mit.edu/projects/976771225/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <li>Project 3 : Runner Game</li>
+        <iframe src="https://scratch.mit.edu/projects/976618174/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        
     </body>
 </html>
