--- a/projects_HOLC.html
+++ b/projects_HOLC.html
@@ -4,5 +4,9 @@
         <h1>Daftar Project HOLC</h1>
         <li>Project 5 : Inventory dengan List</li>
         <iframe src="https://scratch.mit.edu/projects/1007106460/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <li>Project 6A : Game Quiz dengan List</li>
+        <iframe src="https://scratch.mit.edu/projects/1015793268/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <li>Project 6B : Game Quiz dengan List (pertanyaan tidak berulang)</li>
+        <iframe src="https://scratch.mit.edu/projects/1015793523/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </body>
 </html>
