--- a/projects_HOLC.html
+++ b/projects_HOLC.html
@@ -8,5 +8,6 @@
         <iframe src="https://scratch.mit.edu/projects/1015793268/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
         <li>Project 6B : Game Quiz dengan List (pertanyaan tidak berulang)</li>
         <iframe src="https://scratch.mit.edu/projects/1015793523/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        Download file daftar quiz <a href="https://drive.google.com/file/d/1kDnTn_ySbYDRWMSYxQ0ph_FOafndiXkB/view?usp=drive_link">DISINI</a>
     </body>
 </html>
