--- a/evaluasi_HOLC.html
+++ b/evaluasi_HOLC.html
@@ -2,7 +2,10 @@
 <html>
     <body>
         <h1>Evaluasi Belajar HOLC</h1>
-        <li>Debugging 001 : Kado untuk Feby</li>
+	<li>Debugging 001 : Mix and Match Fashion</li>
+	<iframe src="https://scratch.mit.edu/projects/1039363117/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
+        <li>Debugging 002 : Kado untuk Feby</li>
 	<iframe src="https://scratch.mit.edu/projects/1039348260/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </body>
 </html>
