--- a/evaluasi_HOLC.html
+++ b/evaluasi_HOLC.html
@@ -7,5 +7,8 @@
 
         <li>Debugging 002 : Kado untuk Feby</li>
 	<iframe src="https://scratch.mit.edu/projects/1039348260/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
+	<li>Debugging 003 : Spacewars</li>
+	<iframe src="https://scratch.mit.edu/projects/1042038855/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </body>
 </html>
