--- a/bcc_assignment.html
+++ b/bcc_assignment.html
@@ -4,5 +4,7 @@
         <h1>Basic Coding Class Batch 2</h1>
 	<li>Project 002 : Draw Shapes</li>
 	<iframe src="https://scratch.mit.edu/projects/1059190133/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>    
+	<li>Project 003 : Draw Circle</li>
+	<iframe src="https://scratch.mit.edu/projects/1061976296/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </body>
 </html>
