--- a/debugging.html
+++ b/debugging.html
@@ -5,5 +5,10 @@
         <li>Project 1 : Car Runner Game</li>
         <iframe src="https://scratch.mit.edu/projects/993334454/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
       <br>
+        <li>Project 2 : Change the outfit</li>
+        <iframe src="https://scratch.mit.edu/projects/1039363117/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+      <br>
+        <li>Project 3 : Walking Cat</li>
+        <iframe src="https://scratch.mit.edu/projects/940561703/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </body>
 </html>
